--- a/src/gui/Prinsipal.form
+++ b/src/gui/Prinsipal.form
@@ -313,6 +313,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="IcoPenMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="IcoEps1">
           <Properties>
@@ -325,6 +328,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="IcoEps1MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="IcoMDat">
           <Properties>
@@ -334,6 +340,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="IcoMDatMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="IcoNomi">
           <Properties>
@@ -343,6 +352,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="IcoNomiMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="IcoCaja">
           <Properties>
@@ -352,6 +364,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="IcoCajaMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="IcoArl">
           <Properties>
@@ -361,6 +376,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="IcoArlMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="BtnCer">
           <Events>
