--- a/src/gui/Register.form
+++ b/src/gui/Register.form
@@ -179,7 +179,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="SelCargo" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabel8" alignment="3" pref="22" max="32767" attributes="0"/>
+                              <Component id="jLabel8" alignment="3" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Component id="jLabel6" alignment="1" min="-2" max="-2" attributes="0"/>
