--- a/src/gui/PantallaIni1.form
+++ b/src/gui/PantallaIni1.form
@@ -98,7 +98,7 @@
                       <Component id="jLabel3" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
                       <Component id="jLabel4" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="53" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
