--- a/src/gui/Login.form
+++ b/src/gui/Login.form
@@ -33,7 +33,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="10" y="10" width="-1" height="-1"/>
+          <AbsoluteConstraints x="0" y="20" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
 
@@ -230,7 +230,7 @@
         <Component class="javax.swing.JTextField" name="InputCC">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="b2" green="fe" red="cf" type="rgb"/>
+              <Color blue="b4" green="fe" red="d0" type="rgb"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="95" green="95" red="96" type="rgb"/>
